[fix] country select visibility RM#16132

--- a/odoo/local-src/theme_fluxdocs/static/less/style.less
+++ b/odoo/local-src/theme_fluxdocs/static/less/style.less
@@ -180,7 +180,7 @@ body #wrapwrap{ //Outside of wrapwrap is the backend
 		background-color: @darkColor;
 		select{
 			border: none;
-			background-color: @darkColor;
+			background-color: transparent;
 			width: 110%;
 			font-size: 20px;
 			color: white;
